==> china-djyos/djyos/bsp/cpudrv/stm32/f1/src/iic/cpu_peri_iic.c <==
#include "cpu_peri_gpio.h"
#include "djyos.h"
#include "stdint.h"
#include "stdio.h"
#include "cpu_peri.h"
#include "iicbus.h"
#include "endian.h"
#include "lock.h"
#include "int.h"
#include "cpu_peri_iic.h"
#include "cpu_peri_rcc.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_IIC    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_I2C1_ENABLE          false         //"是否配置使用IIC1",
#define CFG_I2C1_BUF_LEN         128           //"IIC1缓冲区大小",
#define CFG_I2C2_ENABLE          false         //"是否配置使用IIC2",
#define CFG_I2C2_BUF_LEN         128           //"IIC2缓冲区大小",
#define CN_IIC1_BASE        (0x40005400u)//无符号地址
#define CN_IIC2_BASE        (0x40005800u)//无符号地址

static void __IIC_IntEnable(volatile tagI2CReg *reg)
{
    reg->CR2 |= I2C_CR2_ITEVTEN_MASK| I2C_CR2_ITBUFEN_MASK;

}

static void __IIC_IntDisable(volatile tagI2CReg *reg)
{
    reg->CR2 &= ~(I2C_CR2_ITEVTEN_MASK| I2C_CR2_ITBUFEN_MASK);
}

static void __IIC_SetClk(volatile tagI2CReg *reg,u32 i2cclk)
{
    switch (i2cclk)
    {
            case CN_IIC_SPEED_50KHZ:    //24M    Thigh = CCR ×TPCLK1  Tlow = 2 × CCR × TPCLK1
                 pg_iic1_reg->CCR     = 240;//快速/标准模式下的时钟控制分频系数(主模式)
                break;
            case CN_IIC_SPEED_100KHZ:
                 pg_iic1_reg->CCR     = 120;//快速/标准模式下的时钟控制分频系数(主模式)
                break;
            case CN_IIC_SPEED_200KHZ:
                 pg_iic1_reg->CCR     = 60;//快速/标准模式下的时钟控制分频系数(主模式)
                break;
            case CN_IIC_SPEED_300KHZ:
                pg_iic1_reg->CCR     =  40;//快速/标准模式下的时钟控制分频系数(主模式)
                break;
            case CN_IIC_SPEED_400KHZ:
                 pg_iic1_reg->CCR     = 30;//快速/标准模式下的时钟控制分频系数(主模式)
                break;
            default:
            break;
    }
}

static void __IIC_GenerateStop(volatile tagI2CReg *reg)
{
    reg->CR1 |=(I2C_CR1_STOP_MASK);//产生停止条件

}

static bool_t __IIC_GenerateWriteStart(tagI2CReg *reg,
                                       u8 dev_addr,
                                       u32 mem_addr,
                                       u8 maddr_len,
                                       u32 length,
                                       struct SemaphoreLCB *iic_semp)
{
    u8 mem_addr_buf[4];
    //通过specific_flag区分是哪条总线
    if((u32)reg == CN_IIC1_BASE)
    {
        IntParamset0.TransTotalLen = length;
        IntParamset0.TransCount = 0;
        IntParamset0.pDrvPostSemp = iic_semp;           //iic_bus_semp
    }
    else if((u32)reg == CN_IIC2_BASE)
    {
        IntParamset1.TransTotalLen = length;
        IntParamset1.TransCount = 0;
        IntParamset1.pDrvPostSemp = iic_semp;
    }
    else
    {
        return false;
    }

    //将地址作大小端变换
    fill_little_32bit(mem_addr_buf,0,mem_addr);
    __IIC_IntDisable(reg);                 //关中断

    //先发送器件地址，内部地址，然后发送第一个数据

        if(__iic_write_addr(reg, dev_addr, I2C_WRITE_BIT) != 0)
        {
            //发送器件内部地址
            if(maddr_len - 1 == __iic_write(reg,mem_addr_buf,maddr_len-1))
            {
                reg->DR = mem_addr_buf[maddr_len-1];
                __IIC_IntEnable(reg);
                return true;
            }
        }

    return false;
}

static bool_t __IIC_GenerateReadStart( tagI2CReg *reg,
                                       u8 dev_addr,
                                       u32 mem_addr,
                                       u8 maddr_len,
                                       u32 length,
                                       struct SemaphoreLCB *iic_semp)
{
    u8 mem_addr_buf[4];

    if((u32)reg == CN_IIC1_BASE)
    {
        IntParamset0.TransTotalLen = length;
        IntParamset0.TransCount = 0;
        IntParamset0.pDrvPostSemp = iic_semp;               //iic_buf_semp
    }
    else if((u32)reg == CN_IIC2_BASE)
    {
        IntParamset1.TransTotalLen = length;
        IntParamset1.TransCount = 0;
        IntParamset1.pDrvPostSemp = iic_semp;
    }
    else
    {
        return false;
    }

    fill_little_32bit(mem_addr_buf,0,mem_addr);
    __IIC_IntDisable(reg);//关中断

    //写器件地址和寻址地址
           if(__iic_write_addr(reg, dev_addr, I2C_WRITE_BIT) != 0)
        {
            if(__iic_write(reg, mem_addr_buf, maddr_len) == maddr_len)//接收完成
            {
                if(length && __iic_write_addr(reg,dev_addr, I2C_READ_BIT) != 0)
                {
                    reg->CR1 |=  I2C_CR1_ACK_MASK;
                    __IIC_IntEnable(reg);//使能中断
                    return true;
                }
            }
        }
    return false;
}

static void __IIC_GenerateEnd(tagI2CReg *reg)
{
    if(reg == NULL)
        return;
    if((reg->SR1 & I2C_SR1_TxE_MASK )&& (reg->SR1 & I2C_SR1_BTF_MASK))//发送
    {
        __IIC_GenerateStop(reg);
    }
    else //接收
    {
        reg->CR1 &= ~(I2C_CR1_ACK_MASK);//停止回复ACK
        __IIC_GenerateStop(reg);
    }
}

static s32 __IIC_BusCtrl(tagI2CReg *reg,u32 cmd,u32 data1,u32 data2)
{
    if( reg == NULL )
        return 0;
    switch(cmd)
    {
    case CN_IIC_SET_CLK: //设置时钟频率
        __IIC_SetClk(reg,data1);
        break;
    case CN_IIC_DMA_USED://使用dma传输

        break;
    case CN_IIC_DMA_UNUSED://禁止dma传输

        break;
    case CN_IIC_SET_POLL:           //使用轮询方式发送接收
        __IIC_IntDisable(reg);
        break;
    case CN_IIC_SET_INT:         //使用中断方式发送接收
        __IIC_IntEnable(reg);
        break;
    default:
        return 0;
    }
    return 1;
}

static u32 __IIC_ISR(ufast_t i2c_int_line)
{
    static struct IIC_CB *ICB;
    static struct IIC_IntParamSet *IntParam;
    tagI2CReg *reg;
    u8 ch;
    u32 IicErrorNo;
    switch (i2c_int_line)
    {
        case CN_INT_LINE_I2C1_EV:
                reg = (tagI2CReg*)CN_IIC1_BASE;
                ICB = s_ptIIC1_CB;
                IntParam = &IntParamset0;
                break;
        case CN_INT_LINE_I2C2_EV:
                reg = (tagI2CReg*)CN_IIC2_BASE;
                ICB = s_ptIIC2_CB;
                IntParam = &IntParamset1;
                break;
        default:
                return false;
    }

    if(reg->SR1 & I2C_SR1_BTF_MASK)        //已经启动传输
    {
        if(reg->SR1 & I2C_SR1_TxE_MASK)      //发送中断
        {
            if(!(reg->SR1 & I2C_SR1_RxNE_MASK))
            {
                //从发送缓冲区读一个字节的数据，并发送
                if(IIC_PortRead(ICB,&ch,1) > 0)
                {
                    reg->DR = ch;
                    IntParam->TransCount ++;;
                }
                else if(IntParam->TransCount == IntParam->TransTotalLen)
                {
                  Lock_SempPost(IntParam->pDrvPostSemp);
                  __IIC_IntDisable(reg);//关中断
                  __IIC_GenerateStop(reg);
                }
            }
            else                        //未收到ACK信号
            {
                IicErrorNo = CN_IIC_POP_NO_ACK_ERR;//调用错处处理API函数
                IIC_ErrPop(ICB,IicErrorNo);
                return 1;
            }
        }
        else                            //接收中断
        {
            while((IntParam->TransCount < IntParam->TransTotalLen))
            {
                // 最后一个字节master不发ACK，表示读操作终止
                if(IntParam->TransCount == IntParam->TransTotalLen - 1)
                {
                    reg->CR1 &=~ I2C_CR1_ACK_MASK;
                }
                while (!(reg->SR1 & I2C_SR1_RxNE_MASK));//等待接收完成
                    ch = reg->DR;
                //写数据
                IIC_PortWrite(ICB,&ch,1);
                IntParam->TransCount ++;
            }
            if((IntParam->TransCount == IntParam->TransTotalLen)  &&
                                        (reg->SR1 & I2C_SR1_BTF_MASK))
            {
                __IIC_GenerateStop(reg);
                __IIC_IntDisable(reg);//关中断
                Lock_SempPost(IntParam->pDrvPostSemp);//释放总线信号量
            }
        }
    }
    else//未启动通信
    {
        if(reg->SR1 & I2C_SR1_ARLO_MASK)//仲裁丢失中断
        {
            reg->SR1 &= ~I2C_SR1_ARLO_MASK;//清除仲裁丢失中断标志位
            IicErrorNo = CN_IIC_POP_MAL_LOST_ERR;
            IIC_ErrPop(ICB,IicErrorNo);
        }
    }

    return true;
}

bool_t IIC1_Init(void)
{
    static u8 s_IIC1Buf[CFG_I2C1_BUF_LEN];
    struct IIC_Param IIC1_Config;

    IIC1_Config.BusName             = "IIC1";
    IIC1_Config.IICBuf              = (u8*)&s_IIC1Buf;
    IIC1_Config.IICBufLen           = CFG_I2C1_BUF_LEN;
    IIC1_Config.SpecificFlag        = CN_IIC1_BASE;
    IIC1_Config.pGenerateWriteStart = (WriteStartFunc)__IIC_GenerateWriteStart;
    IIC1_Config.pGenerateReadStart  = (ReadStartFunc)__IIC_GenerateReadStart;
    IIC1_Config.pGenerateEnd        = (GenerateEndFunc)__IIC_GenerateEnd;
    IIC1_Config.pBusCtrl            = (IICBusCtrlFunc)__IIC_BusCtrl;
    IIC1_Config.pWriteReadPoll      = (WriteReadPoll)__IIC_WriteReadPoll;

    __IIC_GpioConfig(CN_IIC1);
    __IIC_IntConfig(CN_INT_LINE_I2C1_EV,__IIC_ISR);

    if(s_ptIIC1_CB = IIC_BusAdd(&IIC1_Config))
        return 1;
    else
        return 0;
}
